--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,7 +205,6 @@ box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
 
 #headerRight{
     float: right;
-    width: 200px;
 }
 #nav{
     float: left;
@@ -217,7 +216,7 @@ ul.ul_info{
 }
 ul.ul_info li{
     padding-top: 5px;
-
+    list-style-type: none;
 }
 ul.ul_info li a{
     text-decoration: none;
@@ -269,6 +268,9 @@ p.error{
 .collapse.navbar-collapse > #headerRight .ul_info{
     position: absolute;
     z-index: 999;
+    background-color: rgb(248, 248, 248);
+    padding-left: 5px;
+    width: 125px;
 }
 
 .gag-link{
@@ -360,4 +362,11 @@ a{
 color: #000;
 font-size: 18px;
 line-height: 28px;
+}
+.comments {
+background: url("../images/comment_icon.png") no-repeat scroll 0 0 transparent;
+padding-left: 18px;
+}
+#entries-content.list ul .info h1{
+    margin-top: 0;
 }
