--- a/public/css/style.css
+++ b/public/css/style.css
@@ -370,3 +370,10 @@ padding-left: 18px;
 #entries-content.list ul .info h1{
     margin-top: 0;
 }
+div.post-info div.uinfo {
+    font-size: 13px;
+}
+li.gag-link div.content {
+    text-align: center;
+    width: 68%;
+}
