--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,6 +274,7 @@ p.error{
 }
 
 .gag-link{
+    padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid #ddd;
     width: 100%;
@@ -410,4 +411,10 @@ div.thumbnail{
 
 #headerRight{
     margin-top: 10px;
+}
+.profile-info h3 a{
+    font-size: 20px;
+}
+.profile-info h3{
+    margin-top: 0;
 }
