--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,6 +271,9 @@ p.error{
     background-color: rgb(248, 248, 248);
     padding-left: 5px;
     width: 125px;
+    border: 1px solid rgb(231, 227, 227);
+    border-radius: 0 0 5px 5px;
+    border-top-width: 0;
 }
 
 .gag-link{
@@ -409,9 +412,7 @@ div.thumbnail{
     border-width: 0;
 }
 
-#headerRight{
-    margin-top: 10px;
-}
+
 .profile-info h3 a{
     font-size: 20px;
 }
@@ -430,9 +431,9 @@ div.uploader div.info {
     margin-left: 10px;
 }
 .img-wrap .videoIndicator {
-    position: relative;
-    top: -150px;
- 
+    position: absolute;
+    top: 100px;
+    left: 200px;
 }
 #entries-content ul li img {
     margin: 0 auto;
@@ -486,4 +487,8 @@ div.sensitive_content p{
 div.form_photo, div.form_video{
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#f9fdff));
     border: 1px solid rgb(240, 240, 240);
+}
+
+li.gag-link div.content {
+    position: relative;
 }
