--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,13 @@
 a {
   text-decoration: none;
 }
+a:hover {
+  cursor: pointer;
+  text-decoration: none;
+}
 /*navigation*/
 #navbar {
-  min-height: 46px;
-  height: 46px;
+  height: 55px;
 }
 #navbar .navbar-header {
   width: 100%;
@@ -54,6 +57,7 @@ a {
   padding: 10px 12px;
 }
 #navbar .navbar-header .collapse.navbar-collapse > #headerRight .ul_info {
+  display: none;
   position: absolute;
   z-index: 999;
   background-color: #f8f8f8;
@@ -161,6 +165,10 @@ a {
   color: #000;
   font-size: 18px;
   line-height: 28px;
+}
+#items-content.list ul .info a:hover {
+  color: #0087F7;
+  text-decoration: none;
 }
 #items-content.list ul li img {
   margin: 0 auto;
@@ -339,6 +347,10 @@ ul.tagit li.tagit-choice .tagit-close {
 .photoListItemSmall .info {
   float: left !important;
 }
+.photoListItemSmall .info h3 {
+  width: 195px;
+  color: #000;
+}
 #moving-boxes {
   width: 80%;
 }
@@ -366,4 +378,7 @@ h3.topUsers {
 }
 #topUserContent {
   width: 80%;
+}
+.darkBox {
+  height: 108px;
 }
