--- a/public/css/style.less
+++ b/public/css/style.less
@@ -3,12 +3,15 @@
 }
 a{
     text-decoration: none;
+    &:hover{
+        cursor: pointer;
+        text-decoration: none;
+    }
 }
 
 /*navigation*/
 #navbar {
-    min-height: 46px;
-    height: 46px;
+    height: 55px;
     .navbar-header{
         width: 100%;
         .collapse.navbar-collapse{
@@ -52,6 +55,7 @@ a{
                     }
                 }
                 .ul_info{
+                    display: none;
                     position: absolute;
                     z-index: 999;
                     background-color: rgb(248, 248, 248);
@@ -174,16 +178,26 @@ a{
                 }
             }
         }
-        .info h1{ 
-            margin-top: 0;
-            color: #000;
-            font-size: 18px;
-            line-height: 28px;
-            a{
+        .info {
+
+            h1{ 
+                margin-top: 0;
                 color: #000;
                 font-size: 18px;
                 line-height: 28px;
+                a{
+                    color: #000;
+                    font-size: 18px;
+                    line-height: 28px;
+                }
             }
+            a{
+                &:hover {
+                    color: #0087F7;
+                    text-decoration: none;
+                }
+            }
+
         }
         li img{
             margin: 0 auto;
@@ -386,8 +400,15 @@ span.tagit-label{
 ul.tagit li.tagit-choice .tagit-close{
     top: 48% !important;
 }
-.photoListItemSmall .info{
-    float: left !important;
+.photoListItemSmall {
+
+    .info{
+        h3{
+            width: 195px;
+            color: #000;
+        }
+        float: left !important;
+    }
 }
 #moving-boxes{
     width: 80%;
@@ -420,4 +441,7 @@ h3.topUsers{
 
 #topUserContent{
     width: 80%;
+}
+.darkBox{
+    height: 108px;
 }
