--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,6 +181,7 @@ a:hover {
   float: left;
   margin-bottom: 10px;
   list-style-type: none;
+  height: 415px;
 }
 .gag-link .post-info {
   position: relative;
@@ -192,6 +193,14 @@ a:hover {
   text-align: center;
   width: 68%;
   position: relative;
+}
+.gag-link .img-wrap a img {
+  width: 460px;
+  height: 345px;
+}
+.gag-link .img-wrap .videoIndicator {
+  position: relative;
+  top: -200px;
 }
 /*top users*/
 div.topUsers {
@@ -281,11 +290,6 @@ div.post-info {
 }
 div.avatar {
   width: 150px;
-}
-.img-wrap .videoIndicator {
-  position: absolute;
-  top: 100px;
-  left: 200px;
 }
 .prev-arrow {
   border-top: 17px dashed transparent;
