--- a/public/css/style.less
+++ b/public/css/style.less
@@ -214,6 +214,7 @@ a{
     float: left;
     margin-bottom: 10px;
     list-style-type:none;
+    height: 415px;
     .post-info {
         position: relative;
         width: 200px;
@@ -224,6 +225,17 @@ a{
         text-align: center;
         width: 68%;
         position: relative;
+    }
+    .img-wrap{
+
+        a img{
+            width: 460px;
+            height: 345px;
+        }
+        .videoIndicator{
+            position: relative;
+            top: -200px;
+        }
     }
     
 }
@@ -327,12 +339,6 @@ div.post-info{
 }
 div.avatar {
     width: 150px;
-}
-
-.img-wrap .videoIndicator {
-    position: absolute;
-    top: 100px;
-    left: 200px;
 }
 
 .prev-arrow {
