--- a/public/css/style.less
+++ b/public/css/style.less
@@ -142,6 +142,11 @@ a{
                 padding-top: 5px;
                 display: inline;
             }
+            &.tab_video {
+                img{
+                    height: 40px;
+                }
+            }
         }
 
     }
