--- a/public/css/style.less
+++ b/public/css/style.less
@@ -228,7 +228,7 @@ a{
 }
 
 
-.gag-link{
+.item{
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid #ddd;
@@ -486,7 +486,7 @@ h3.topUsers{
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
 
-    .gag-link{
+    .item{
         .img-wrap{
 
             a img{
@@ -514,7 +514,7 @@ h3.topUsers{
         visibility: visible;
     }
 
-    .gag-link{
+    .item{
         .img-wrap{
             a img{
                 width: 270px;
