--- a/public/css/style.less
+++ b/public/css/style.less
@@ -169,7 +169,7 @@ a{
 
 
 /*videos list*/
-#items-content.list { 
+#video-content.list { 
     ul {
         padding-left: 0;
 
@@ -224,43 +224,44 @@ a{
         li img{
             margin: 0 auto;
         }
-    }
-}
-
-
-.item{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-    width: 100%;
-    /*float: left;*/
-    margin-bottom: 10px;
-    list-style-type:none;
-    height: 415px;
-    .post-info {
-        position: relative;
-        width: 200px;
-        float: right;
-    }
-    .content{
-        text-align: center;
-    
-        .img-wrap{
-
-            a img{
-               /* min-width: 270px;
-                width: 100%;
-                max-width: 460px;
-                max-height: 345px;*/
-            }
-            /*.videoIndicator{
+        .video{
+            padding-top: 20px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #ddd;
+            width: 100%;
+            /*float: left;*/
+            margin-bottom: 10px;
+            list-style-type:none;
+            height: 415px;
+            .post-info {
                 position: relative;
-                top: -200px;
-            }*/
+                width: 200px;
+                float: right;
+            }
+            .content{
+                text-align: center;
+            
+                .img-wrap{
+
+                    a img{
+                       /* min-width: 270px;
+                        width: 100%;
+                        max-width: 460px;
+                        max-height: 345px;*/
+                    }
+                    /*.videoIndicator{
+                        position: relative;
+                        top: -200px;
+                    }*/
+                }
+            }
+            
         }
     }
-    
 }
+
+
+
 
 
 
