--- a/public/css/style.less
+++ b/public/css/style.less
@@ -19,10 +19,10 @@ a{
                 float: left;
                 margin-left: 0;
                 a {
-                  background: url("../images/logo-white.png") no-repeat;
+                 
                   display: block;
                   text-indent: -9999px;
-                  width: 150px;
+                 
                   height: 30px;
                   margin: 8px 0;
                 }
@@ -204,6 +204,7 @@ a{
 
             h1{ 
                 margin-top: 0;
+                margin-bottom: 0;
                 color: #000;
                 font-size: 18px;
                 line-height: 28px;
@@ -228,13 +229,15 @@ a{
             border-bottom: 1px solid #ddd;
             width: 100%;
             /*float: left;*/
-            margin-bottom: 10px;
+            /*margin-bottom: 10px;*/
             list-style-type:none;
-            height: 415px;
+            /*height: 415px;*/
+            height: auto;
+            overflow: hidden;
             .post-info {
                 position: relative;
-                width: 200px;
-                float: right;
+                /*width: 200px;*/
+                /*float: right;*/
             }
             div.content{
                 height: auto;
@@ -481,7 +484,20 @@ img.videoIndicator {
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
+    #navbar {
+        .head-logo {
+            a{
+                width: 150px;
+                #logo{
+                    display: block; 
+                }
+                #small-logo{
+                    display: none;
+                }
+            }
+        }
 
+    }
     .video{
 
         a img{
@@ -502,6 +518,33 @@ img.videoIndicator {
        
         display: block;
         visibility: visible;
+    }
+
+    #navbar {
+        .head-logo {
+            a{
+                width: auto;
+                #logo{
+                    display: none; 
+                }
+                #small-logo{
+                    display: block; 
+                }
+            }
+        }
+        #headerRight{
+            display: none;
+        }
+        ul li {
+            &:last-child{
+                display: none;
+            }
+            a{
+                padding-left: 5px;
+                padding-right: 5px;
+            }
+        }
+
     }
 
     .video{
